# e-commerce_etl

./: pyproject.toml
data/bronze/orders/: .part-00000-05298d77-bfaa-4b4c-9571-25d9d940d4da-c000.snappy.parquet.crc  .part-00000-2a6c2d3a-b901-4566-830f-ca392f25f26b-c000.snappy.parquet.crc  .part-00000-965a62b4-9a21-423e-9f19-e3bf6c0ce9a1-c000.snappy.parquet.crc  part-00000-05298d77-bfaa-4b4c-9571-25d9d940d4da-c000.snappy.parquet  part-00000-2a6c2d3a-b901-4566-830f-ca392f25f26b-c000.snappy.parquet  part-00000-965a62b4-9a21-423e-9f19-e3bf6c0ce9a1-c000.snappy.parquet
data/gold/daily_revenue/: .part-00000-4478f744-d117-4d36-a1dc-a234a8bc9cbd-c000.snappy.parquet.crc  .part-00000-51e87ed3-989a-4a75-ad4a-066cb386267a-c000.snappy.parquet.crc  .part-00000-edab5d09-9e8e-40cd-8dd4-204431292e92-c000.snappy.parquet.crc  .part-00000-f159ef7a-c047-4a6d-9b79-5e856f53ed44-c000.snappy.parquet.crc  part-00000-4478f744-d117-4d36-a1dc-a234a8bc9cbd-c000.snappy.parquet  part-00000-51e87ed3-989a-4a75-ad4a-066cb386267a-c000.snappy.parquet  part-00000-edab5d09-9e8e-40cd-8dd4-204431292e92-c000.snappy.parquet  part-00000-f159ef7a-c047-4a6d-9b79-5e856f53ed44-c000.snappy.parquet
data/gold/revenue_by_channel/: .part-00000-68ba30dc-069d-42ba-880e-fc47a6c8858f-c000.snappy.parquet.crc  .part-00000-805785c5-d1ef-4b37-bb1e-8b63f0777bdc-c000.snappy.parquet.crc  .part-00000-cc3b4d16-58d2-44e8-ad4b-d35e093b02e5-c000.snappy.parquet.crc  (+3 more)
data/raw/: orders.csv
src/ecommerce_etl/: bronze.py  generate_data.py  gold.py  peek.py  silver.py  spark_session.py
(+56 files in other folders)
