[project]
name = "pyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Franklin Oni-Ossai", email = "oniossaifranklin@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pyspark (==4.1.1)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "delta-spark (==4.3.1)",
    "faker (>=40.31.0,<41.0.0)"
]

[tool.poetry]
packages = [{ include = "ecommerce_etl", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "black (>=26.5.1,<27.0.0)"
]